--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "ioredis": "^5.4.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.15",
     "pg": "^8.13.0"
