--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "http": "^0.0.1-security",
     "ioredis": "^5.4.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.15",
     "pg": "^8.13.0"
+  },
+  "devDependencies": {
+    "crypto": "^1.0.1"
   }
 }
